# de-batch-pipeline

./: .dockerignore  .gitignore  .gitpod.yml  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.zed/: settings.json
dagster_home/: dagster.yaml
dagster_home/.telemetry/: id.yaml
docker/dagster/: Dockerfile
orchestration/: resources.py
orchestration/assets/: dbt_assets.py  dbt_transformations.py  export_to_minio.py  ingest_raw_data.py  load_to_duckdb.py  raw_ingest.py
scripts/: check.sh  clean.sh  logs.sh  monitor.sh  start.sh  stop.sh  venv.sh
transformation/: .user.yml  dbt_project.yml  profiles.yml
transformation/models/marts/analytics/: daily_sales_summary.sql  top_customers.sql
transformation/models/marts/core/: dim_customers.sql  fct_orders.sql  schema.yml
transformation/models/staging/: schema.yml  sources.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql
