[project]
name = "de-batch-pipeline"
version = "0.1.0"
description = "Batch data engineering pipeline with Dagster, DuckDB, and dbt"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.6.0",
    "dagster-webserver>=0.24.0",
    "dagster-postgres>=0.22.0",
    "dagster-duckdb>=0.22.0",
    "dbt-core>=1.7.0",
    "dbt-duckdb>=1.7.0",
    "polars>=0.20.0",
    "duckdb>=0.10.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ipython>=8.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
